--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,21 @@ services:
     volumes:  # pull changes in real time to the container
       - ./app:/app
     command: >  # command that runs the service
-      sh -c "python manage.py runserver 0.0.0.0:8000"  # using shell
+      sh -c "python manage.py wait_for_db &&
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"  # using shell
+    environment:
+      - DB_HOST=db
+      - DB_NAME=app
+      - DB_USER=postgres
+      - DB_PASS=somepasswordthathastobereplaced
+    depends_on:
+      - db
 
-
+  db:
+    image: postgres:10-alpine
+    environment:
+      - POSTGRES_DB=app
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=somepasswordthathastobereplaced
+  
