--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 Django>=2.1.3,<2.2.0  # Latest security packages but not mayor changes
 djangorestframework>=3.9.0,<3.10.0
+psycopg2>=2.7.5,<2.8.0 # package to communicate django and postgres
 flake8>=3.6.0,<3.7.0
